compiler-core/src/error/snapshots/gleam_core__error__tests__erlc-macos-unknown.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
The program `erlc` was not found. Is it installed?
Documentation for installing Erlang can be viewed here:
https://gleam.run/getting-started/installing/
You can install erlang via homebrew: brew install erlang
