compiler-core/src/error/snapshots/gleam_core__error__tests__failed_to_decrypt_local_hex_api_key.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0]"
---
Diagnostic {
    title: "Failed to decrypt local Hex API key",
    text: "Unable to decrypt the local Hex API key with the given password.",
    level: Error,
    location: None,
    hint: Some(
        "Check that you entered the correct local password and try again.",
    ),
}
