compiler-core/src/error/snapshots/gleam_core__error__tests__file_not_found.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File not found

This file was not found:

    /file
