compiler-core/src/error/snapshots/gleam_core__error__tests__hex_release_not_found.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0]"
---
Diagnostic {
    title: "Hex API failure",
    text: "There is no version 1.234234.2 of the package birdie.",
    level: Error,
    location: None,
    hint: None,
}
