compiler-core/src/error/snapshots/gleam_core__error__tests__hex_session_revoked.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
Your Hex session has been revoked or has expired.

You'll need to re-authenticate to continue using Hex.
